--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -2,15 +2,15 @@
 import Globe from "./globe.astro";
 ---
 
-<section class="bg-gray-50 py-10 lg:py-32" id="bento">
+<section class="bg-gray-50 py-12 md:py-24" id="bento">
   <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
     <p
-      class="mx-auto mt-2 text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
+      class="mx-auto text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
     >
       Empowering Your Sucsess
     </p>
 
-    <div class="mt-10 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
+    <div class="mt-4 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
       <div class="relative lg:row-span-2">
         <div class="absolute inset-px rounded-lg bg-white lg:rounded-l-[2rem]">
         </div>
@@ -19,7 +19,7 @@ import Globe from "./globe.astro";
         >
           <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
             <p
-              class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
+              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
             >
               MBA
             </p>
@@ -61,7 +61,7 @@ import Globe from "./globe.astro";
         >
           <div class="px-8 pt-8 sm:px-10 sm:pt-10">
             <p
-              class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
+              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
             >
               MIT
             </p>
@@ -91,7 +91,7 @@ import Globe from "./globe.astro";
         >
           <div class="px-8 pt-8 sm:px-10 sm:pt-10">
             <p
-              class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
+              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
             >
               MMTH
             </p>
@@ -131,7 +131,7 @@ import Globe from "./globe.astro";
         >
           <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
             <p
-              class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
+              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
             >
               Requirements
             </p>
