--- a/src/components/higher-education/info.astro
+++ b/src/components/higher-education/info.astro
@@ -1,21 +1,16 @@
 <section class="bg-czyan">
-  <article class="container flex flex-col gap-y-6 py-20 text-center">
+  <article class="container flex flex-col gap-y-6 py-12 text-center md:py-24">
     <h2
-      class="big-heading mx-auto text-balance font-black leading-none text-white"
+      class="heading-1 mx-auto text-balance font-black leading-none text-white"
     >
       With ICMS, you will have the opportunity to complete a Professional
       Placement.
     </h2>
 
     <p
-      class="big-heading mx-auto text-balance font-black leading-none text-cpurple"
+      class="heading-1 mx-auto text-balance font-black leading-none text-cpurple"
     >
       ¡A secure individually Tailored Internship!
     </p>
-
-    <button
-      class="mx-auto w-fit appearance-none border-none bg-cpurple-100 px-4 py-2 text-white shadow shadow-cpurple-100 outline-none transition-colors hover:bg-cpurple-200 lg:mt-10"
-      >Apply now!</button
-    >
   </article>
 </section>
