chore: replace dvh with vh video

--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
   class="min-h-dvh bg-black after:absolute after:inset-0 after:bg-dotted-overlay"
 >
   <video
-    class="absolute inset-0 mx-auto h-dvh w-full object-cover object-bottom"
+    class="h-vh absolute inset-0 mx-auto w-full object-cover object-bottom"
     src="/videos/MBA.mp4"
     playsinline
     muted
