fix: add h-screen to video

--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -3,10 +3,10 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="min-h-dvh bg-black after:absolute after:inset-0 after:bg-dotted-overlay"
+  class="min-h-screen bg-black after:absolute after:inset-0 after:bg-dotted-overlay"
 >
   <video
-    class="h-vh absolute inset-0 mx-auto w-full object-cover object-bottom"
+    class="absolute inset-0 mx-auto h-screen w-full object-cover object-bottom"
     src="/videos/MBA.mp4"
     playsinline
     muted
