--- a/src/components/higher-education/scroll-driven-animation.astro
+++ b/src/components/higher-education/scroll-driven-animation.astro
@@ -22,6 +22,8 @@
     animation-range: 0 100dvh;
     animation: shrink both ease-out;
     animation-timeline: view(block 20% 30%);
+    animation-duration: 3ms; /* Firefox requires this to apply the animation */
+
     --scale: 2.5;
     --translate: -33.7%;
 
