test: add polyfill for scroll timeline

--- a/src/components/higher-education/scroll-driven-animation.astro
+++ b/src/components/higher-education/scroll-driven-animation.astro
@@ -1,3 +1,6 @@
+<script src="https://flackr.github.io/scroll-timeline/dist/scroll-timeline.js"
+></script>
+
 <section class="relative grid place-items-center bg-black">
   <h3 class="z-10 text-white">Work Integrated Learning!</h3>
 </section>
