chore: resize breakpoints scale

--- a/src/components/higher-education/scroll-driven-animation.astro
+++ b/src/components/higher-education/scroll-driven-animation.astro
@@ -1,7 +1,4 @@
-<script src="https://flackr.github.io/scroll-timeline/dist/scroll-timeline.js"
-></script>
-
-<section class="relative grid place-items-center bg-black">
+<section class="relative grid place-items-center overflow-clip bg-black">
   <h3 class="z-10 text-white">Work Integrated Learning!</h3>
 </section>
 
@@ -27,11 +24,11 @@
     animation-timeline: view(block 20% 30%);
     animation-duration: 3ms; /* Firefox requires this to apply the animation */
 
-    --scale: 2.5;
-    --translate: -33.7%;
+    --scale: 2.3;
+    --translate: -33%, 35%;
 
     @media (min-width: 768px) {
-      --scale: 3.7;
+      --scale: 3.3;
       --translate: -32%;
     }
     @media (min-width: 1024px) {
