--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "@fontsource/lato";
 import TopBar from "@/components/top-bar.astro";
 import Footer from "@/components/footer.astro";
+import Whatsapp from "@/components/wpp-btn.astro";
 
 interface Props {
   title: string;
@@ -21,6 +22,7 @@ const { title } = Astro.props;
   <body>
     <TopBar />
     <slot />
+    <Whatsapp />
     <Footer />
   </body>
 </html>
