--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import "@fontsource/lato";
 import TopBar from "@/components/top-bar.astro";
 import Footer from "@/components/footer.astro";
-import Whatsapp from "@/components/wpp-btn.astro";
+import Globals from "@/components/globals.astro";
 
 interface Props {
   title: string;
@@ -22,7 +22,7 @@ const { title } = Astro.props;
   <body>
     <TopBar />
     <slot />
-    <Whatsapp />
+    <Globals />
     <Footer />
   </body>
 </html>
