chore: update ui with latest changes

--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -2,169 +2,166 @@
 import Globe from "./globe.astro";
 ---
 
-<section class="bg-gray-50 py-12 md:py-24" id="bento">
-  <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
-    <p
-      class="mx-auto text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
-    >
-      Empowering Your Sucsess
-    </p>
+<section class="container bg-gray-50 py-12 md:py-24" id="bento">
+  <p
+    class="mx-auto text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
+  >
+    Empowering Your Sucsess
+  </p>
 
-    <div class="mt-4 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
-      <div class="relative lg:row-span-2">
-        <div class="absolute inset-px rounded-lg bg-white lg:rounded-l-[2rem]">
-        </div>
-        <div
-          class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] lg:rounded-l-[calc(2rem+1px)]"
-        >
-          <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
-            <p
-              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
-            >
-              MBA
-            </p>
-            <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              You will have the opportunity to complete an Action Learning
-              Project and a Professional Placement in an Australian or
-              international business within your two Work Integrated Learning
-              (WIL) subjects, included within the degree.
-            </p>
-          </div>
-          <div
-            class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
+  <div class="mt-4 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
+    <div class="relative lg:row-span-2">
+      <div class="absolute inset-px rounded-lg bg-white lg:rounded-l-[2rem]">
+      </div>
+      <div
+        class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] lg:rounded-l-[calc(2rem+1px)]"
+      >
+        <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
+          <p
+            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
           >
-            <div
-              class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
-            >
-              <video
-                class="size-full object-cover object-top"
-                src="/videos/1.mp4"
-                autoplay
-                loop
-                muted
-                playsinline></video>
-            </div>
-          </div>
+            MBA
+          </p>
+          <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
+            You will have the opportunity to complete an Action Learning Project
+            and a Professional Placement in an Australian or international
+            business within your two Work Integrated Learning (WIL) subjects,
+            included within the degree.
+          </p>
         </div>
         <div
-          class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5 lg:rounded-l-[2rem]"
+          class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
         >
+          <div
+            class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
+          >
+            <video
+              class="size-full object-cover object-top"
+              src="/videos/1.mp4"
+              autoplay
+              loop
+              muted
+              playsinline></video>
+          </div>
         </div>
       </div>
-      <div class="relative max-lg:row-start-1">
-        <div
-          class="absolute inset-px rounded-lg bg-white max-lg:rounded-t-[2rem]"
-        >
-        </div>
-        <div
-          class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] max-lg:rounded-t-[calc(2rem+1px)]"
-        >
-          <div class="px-8 pt-8 sm:px-10 sm:pt-10">
-            <p
-              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
-            >
-              MIT
-            </p>
-            <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              The MIT could open up a range of career opportunities for
-              graduates within the systems, networks and database sectors that
-              are currently identified as ‘strategic skills’ by the Australian
-              Government.
-            </p>
-          </div>
-
-          <div
-            class="relative flex h-60 flex-col items-center bg-transparent md:h-60 dark:bg-transparent"
+      <div
+        class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5 lg:rounded-l-[2rem]"
+      >
+      </div>
+    </div>
+    <div class="relative max-lg:row-start-1">
+      <div
+        class="absolute inset-px rounded-lg bg-white max-lg:rounded-t-[2rem]"
+      >
+      </div>
+      <div
+        class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] max-lg:rounded-t-[calc(2rem+1px)]"
+      >
+        <div class="px-8 pt-8 sm:px-10 sm:pt-10">
+          <p
+            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
           >
-            <Globe />
-          </div>
+            MIT
+          </p>
+          <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
+            The MIT could open up a range of career opportunities for graduates
+            within the systems, networks and database sectors that are currently
+            identified as ‘strategic skills’ by the Australian Government.
+          </p>
         </div>
+
         <div
-          class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5 max-lg:rounded-t-[2rem]"
+          class="relative flex h-60 flex-col items-center bg-transparent md:h-60 dark:bg-transparent"
         >
+          <Globe />
         </div>
       </div>
-      <div class="relative max-lg:row-start-3 lg:col-start-2 lg:row-start-2">
-        <div class="absolute inset-px rounded-lg bg-white"></div>
-        <div
-          class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)]"
-        >
-          <div class="px-8 pt-8 sm:px-10 sm:pt-10">
-            <p
-              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
-            >
-              MMTH
-            </p>
-            <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              Graduates of the Master of Management (Tourism and Hospitality)
-              will be positioned to take advantage of new opportunities in the
-              rapidly expanding services industry, including government
-              agencies, hospitality and entertainment services, retail travel,
-              theme parks and attractions, tourism authorities, cruise
-              companies, airlines and integrated resorts.
-            </p>
-          </div>
-
-          <div
-            class="flex flex-1 items-center justify-center px-8 max-lg:pb-12 max-lg:pt-10 sm:px-10 lg:pb-2"
+      <div
+        class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5 max-lg:rounded-t-[2rem]"
+      >
+      </div>
+    </div>
+    <div class="relative max-lg:row-start-3 lg:col-start-2 lg:row-start-2">
+      <div class="absolute inset-px rounded-lg bg-white"></div>
+      <div
+        class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)]"
+      >
+        <div class="px-8 pt-8 sm:px-10 sm:pt-10">
+          <p
+            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
           >
-            <img
-              class="w-full max-lg:max-w-xs"
-              src="/images/globe.webp"
-              alt="countries and states"
-              loading="lazy"
-            />
-          </div>
+            MMTH
+          </p>
+          <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
+            Graduates of the Master of Management (Tourism and Hospitality) will
+            be positioned to take advantage of new opportunities in the rapidly
+            expanding services industry, including government agencies,
+            hospitality and entertainment services, retail travel, theme parks
+            and attractions, tourism authorities, cruise companies, airlines and
+            integrated resorts.
+          </p>
         </div>
+
         <div
-          class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5"
+          class="flex flex-1 items-center justify-center px-8 max-lg:pb-12 max-lg:pt-10 sm:px-10 lg:pb-2"
         >
+          <img
+            class="w-full max-lg:max-w-xs"
+            src="/images/globe.webp"
+            alt="countries and states"
+            loading="lazy"
+          />
         </div>
       </div>
-      <div class="relative lg:row-span-2">
-        <div
-          class="absolute inset-px rounded-lg bg-white max-lg:rounded-b-[2rem] lg:rounded-r-[2rem]"
-        >
-        </div>
-        <div
-          class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] max-lg:rounded-b-[calc(2rem+1px)] lg:rounded-r-[calc(2rem+1px)]"
-        >
-          <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
-            <p
-              class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
-            >
-              Requirements
-            </p>
-            <ul
-              class="ml-5 mt-2 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600"
-            >
-              <li>
-                Succesfull completion of a bachelor's degree or postgrdauate
-                program, GPA 3.0 (on a 5 point scale)
-              </li>
-              <li>English proficiency: 6.5 overall eq. IELTS</li>
-            </ul>
-          </div>
-          <div
-            class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
+      <div
+        class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5"
+      >
+      </div>
+    </div>
+    <div class="relative lg:row-span-2">
+      <div
+        class="absolute inset-px rounded-lg bg-white max-lg:rounded-b-[2rem] lg:rounded-r-[2rem]"
+      >
+      </div>
+      <div
+        class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] max-lg:rounded-b-[calc(2rem+1px)] lg:rounded-r-[calc(2rem+1px)]"
+      >
+        <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
+          <p
+            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
           >
-            <div
-              class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
-            >
-              <video
-                class="size-full object-cover object-top"
-                src="/videos/2.mp4"
-                controls
-                muted
-                poster="https://www.wearetop.co/wp-content/uploads/2019/05/Colombia-Cover.jpg"
-              ></video>
-            </div>
-          </div>
+            Requirements
+          </p>
+          <ul
+            class="ml-5 mt-2 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600"
+          >
+            <li>
+              Succesfull completion of a bachelor's degree or postgrdauate
+              program, GPA 3.0 (on a 5 point scale)
+            </li>
+            <li>English proficiency: 6.5 overall eq. IELTS</li>
+          </ul>
         </div>
         <div
-          class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5 max-lg:rounded-b-[2rem] lg:rounded-r-[2rem]"
+          class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
         >
+          <div
+            class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
+          >
+            <video
+              class="size-full object-cover object-top"
+              src="/videos/2.mp4"
+              controls
+              muted
+              poster="https://www.wearetop.co/wp-content/uploads/2019/05/Colombia-Cover.jpg"
+            ></video>
+          </div>
         </div>
+      </div>
+      <div
+        class="pointer-events-none absolute inset-px rounded-lg shadow ring-1 ring-black/5 max-lg:rounded-b-[2rem] lg:rounded-r-[2rem]"
+      >
       </div>
     </div>
   </div>
