--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -9,7 +9,7 @@ import Pricing from "@/components/higher-education/pricing.astro";
 import Contact from "@/components/higher-education/contact.svelte";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Higher Education - WeAreTop">
   <Hero />
   <ScrollDrivenAnimation />
   <CountDown />
