--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource/lato";
+import Head from "@/components/head.astro";
 import TopBar from "@/components/top-bar.astro";
 import Footer from "@/components/footer.astro";
 import Globals from "@/components/globals.astro";
@@ -16,8 +17,8 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title}</title>
+    <Head />
   </head>
   <body>
     <TopBar />
