chore: remove bg color to bento grid container

--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -2,7 +2,7 @@
 import Globe from "./globe.astro";
 ---
 
-<section class="container bg-gray-50 py-12 md:py-24" id="bento">
+<section class="container py-12 md:py-24" id="bento">
   <p
     class="mx-auto text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
   >
