--- a/src/components/higher-education/info.astro
+++ b/src/components/higher-education/info.astro
@@ -1,14 +1,14 @@
-<section class="bg-czyan">
+<section class="bg-cteal-100">
   <article class="container flex flex-col gap-y-6 py-12 text-center md:py-24">
     <h2
-      class="heading-1 mx-auto text-balance font-black leading-none text-white"
+      class="heading-1 mx-auto leading-none font-black text-balance text-white"
     >
       With ICMS, you will have the opportunity to complete a Professional
       Placement.
     </h2>
 
     <p
-      class="heading-1 mx-auto text-balance font-black leading-none text-cpurple"
+      class="heading-1 text-cpurple-500 mx-auto leading-none font-black text-balance"
     >
       ¡A secure individually Tailored Internship!
     </p>
