--- a/src/components/higher-education/pricing.astro
+++ b/src/components/higher-education/pricing.astro
@@ -44,7 +44,7 @@ const PLANS = [
         career-focused education that offers a wide range of undergraduate and
         postgraduate degrees and courses.
       </p>
-      <p class="leading-tight tracking-wide text-cpurple">
+      <p class="text-cpurple-500 leading-tight tracking-wide">
         ¡Work Integrated Learning! Professional Placements and analytical report
         writing are experiences that will differentiate you from other graduates
         in the competitive job market.
@@ -71,7 +71,7 @@ const PLANS = [
             <a
               href={plan.video}
               target="_blank"
-              class="absolute bottom-5 left-4 right-4 flex min-h-20 items-center justify-center text-balance rounded-2xl bg-black/10 px-4 py-4 text-center text-2xl font-medium leading-6 text-white drop-shadow-md backdrop-blur-sm"
+              class="absolute right-4 bottom-5 left-4 flex min-h-20 items-center justify-center rounded-2xl bg-black/10 px-4 py-4 text-center text-2xl leading-6 font-medium text-balance text-white drop-shadow-md backdrop-blur-sm"
             >
               {plan.name}
             </a>
