--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Head from "@/components/head.astro";
 import TopBar from "@/components/top-bar.astro";
 import Footer from "@/components/footer.astro";
 import Globals from "@/components/globals.astro";
+import "../styles/global.css";
 
 interface Props {
   title: string;
