--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -4,7 +4,7 @@ import Globe from "./globe.astro";
 
 <section class="container py-12 md:py-24" id="bento">
   <p
-    class="mx-auto text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
+    class="mx-auto text-center text-4xl font-semibold tracking-tight text-balance text-gray-950 sm:text-5xl"
   >
     Empowering Your Sucsess
   </p>
@@ -16,9 +16,9 @@ import Globe from "./globe.astro";
       <div
         class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] lg:rounded-l-[calc(2rem+1px)]"
       >
-        <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
+        <div class="px-8 pt-8 pb-3 sm:px-10 sm:pt-10 sm:pb-0">
           <p
-            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
+            class="text-cpurple-300 mt-2 text-lg font-semibold tracking-tight max-lg:text-center"
           >
             MBA
           </p>
@@ -30,10 +30,10 @@ import Globe from "./globe.astro";
           </p>
         </div>
         <div
-          class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
+          class="[container-type:inline-size] relative min-h-[30rem] w-full grow max-lg:mx-auto max-lg:max-w-sm"
         >
           <div
-            class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
+            class="absolute inset-x-10 top-10 bottom-0 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
           >
             <video
               class="size-full object-cover object-top"
@@ -60,7 +60,7 @@ import Globe from "./globe.astro";
       >
         <div class="px-8 pt-8 sm:px-10 sm:pt-10">
           <p
-            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
+            class="text-cpurple-300 mt-2 text-lg font-semibold tracking-tight max-lg:text-center"
           >
             MIT
           </p>
@@ -89,7 +89,7 @@ import Globe from "./globe.astro";
       >
         <div class="px-8 pt-8 sm:px-10 sm:pt-10">
           <p
-            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
+            class="text-cpurple-300 mt-2 text-lg font-semibold tracking-tight max-lg:text-center"
           >
             MMTH
           </p>
@@ -104,7 +104,7 @@ import Globe from "./globe.astro";
         </div>
 
         <div
-          class="flex flex-1 items-center justify-center px-8 max-lg:pb-12 max-lg:pt-10 sm:px-10 lg:pb-2"
+          class="flex flex-1 items-center justify-center px-8 max-lg:pt-10 max-lg:pb-12 sm:px-10 lg:pb-2"
         >
           <img
             class="w-full max-lg:max-w-xs"
@@ -127,14 +127,14 @@ import Globe from "./globe.astro";
       <div
         class="relative flex h-full flex-col overflow-hidden rounded-[calc(theme(borderRadius.lg)+1px)] max-lg:rounded-b-[calc(2rem+1px)] lg:rounded-r-[calc(2rem+1px)]"
       >
-        <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
+        <div class="px-8 pt-8 pb-3 sm:px-10 sm:pt-10 sm:pb-0">
           <p
-            class="mt-2 text-lg font-semibold tracking-tight text-cpurple max-lg:text-center"
+            class="text-cpurple-300 mt-2 text-lg font-semibold tracking-tight max-lg:text-center"
           >
             Requirements
           </p>
           <ul
-            class="ml-5 mt-2 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600"
+            class="mt-2 ml-5 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600"
           >
             <li>
               Succesfull completion of a bachelor's degree or postgrdauate
@@ -144,10 +144,10 @@ import Globe from "./globe.astro";
           </ul>
         </div>
         <div
-          class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
+          class="[container-type:inline-size] relative min-h-[30rem] w-full grow max-lg:mx-auto max-lg:max-w-sm"
         >
           <div
-            class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
+            class="absolute inset-x-10 top-10 bottom-0 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-100 bg-gray-900 shadow-2xl"
           >
             <video
               class="size-full object-cover object-top"
