--- a/src/components/nav-desktop.astro
+++ b/src/components/nav-desktop.astro
@@ -10,30 +10,30 @@ import { formatText, hasSubMenus } from "@/utils/nav";
       hasSubMenus(value) ? (
         // With submenus
         <div class="group relative">
-          <span class="flex h-full cursor-pointer items-center px-4 transition-colors group-hover:bg-cpurple-200">
+          <span class="group-hover:bg-cpurple-200 flex h-full cursor-pointer items-center px-4 transition-colors">
             <Icon
               name={`navbar/${formatText(key).toLowerCase()}`}
               class="mr-2 size-2.5 rotate-[-40deg]"
             />
             {formatText(key)}
           </span>
-          <div class="absolute left-0 top-full z-50 hidden min-w-[200px] bg-black shadow-lg group-hover:block">
+          <div class="absolute top-full left-0 z-50 hidden min-w-[200px] bg-black shadow-lg group-hover:block">
             {Object.entries(value).map(([subKey, subValue]) =>
               hasSubMenus(subValue) ? (
-                <div class="group/sub relative border-t border-cmutted-foreground/30">
-                  <span class="flex cursor-pointer justify-between px-4 py-2 font-semibold transition-colors hover:text-czyan group-hover/sub:text-czyan">
+                <div class="group/sub relative border-t border-white/30">
+                  <span class="hover:text-cteal-100 group-hover/sub:text-cteal-100 flex cursor-pointer justify-between px-4 py-2 font-semibold transition-colors">
                     {formatText(subKey)}
                     <Icon
                       name="navbar/chevron"
-                      class="size-2.5 text-cmutted-foreground"
+                      class="size-2.5 text-white/60"
                     />
                   </span>
-                  <div class="absolute left-full top-0 hidden min-w-[200px] bg-black shadow-lg group-hover/sub:block">
+                  <div class="absolute top-0 left-full hidden min-w-[200px] bg-black shadow-lg group-hover/sub:block">
                     {Object.entries(subValue).map(
                       ([subSubKey, subSubValue]) => (
                         <a
                           href={(ROUTES.WEARETOP + subSubValue) as string}
-                          class="block border-t border-cmutted-foreground/30 px-4 py-2 font-semibold text-cmutted-foreground transition-colors hover:text-white"
+                          class="block border-t border-white/30 px-4 py-2 font-semibold text-white/60 transition-colors hover:text-white"
                         >
                           {formatText(subSubKey)}
                         </a>
@@ -45,7 +45,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
                 // Without submenus
                 <a
                   href={(ROUTES.WEARETOP + subValue) as string}
-                  class="block px-4 py-2 font-semibold hover:text-czyan"
+                  class="hover:text-cteal-100 block px-4 py-2 font-semibold"
                 >
                   {formatText(subKey)}
                 </a>
@@ -57,7 +57,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
         // Normal items
         <a
           href={(ROUTES.WEARETOP + value) as string}
-          class="after-star flex items-center px-4 py-10 transition-colors last-of-type:relative last-of-type:bg-cpurple-100 hover:bg-cpurple-200 [&:first-of-type>svg]:skew-x-[-18deg]"
+          class="after-star last-of-type:bg-cpurple-300 hover:bg-cpurple-200 flex items-center px-4 py-10 transition-colors last-of-type:relative [&:first-of-type>svg]:skew-x-[-18deg]"
         >
           <Icon
             name={`navbar/${formatText(key).toLowerCase()}`}
