--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,7 +5,7 @@
     <p class="order-2 text-center text-xs">
       &copy; {new Date().getFullYear()} WeAreTop. All rights reserved. Powered by
       <a
-        class="underline decoration-neutral-500 decoration-dotted underline-offset-[5px] transition-colors duration-150 ease-in hover:text-czyan"
+        class="hover:text-czyan underline decoration-neutral-500 decoration-dotted underline-offset-[5px] transition-colors duration-150 ease-in"
         href="https://rxtsel.dev"
         target="_blank"
       >
