chore(hero): add dotted overlay

--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="after:bg-dotted-overlay min-h-screen bg-black after:absolute after:inset-0"
+  class="dotted-overlay min-h-screen bg-black after:absolute after:inset-0"
 >
   <video
     class="absolute inset-0 mx-auto h-screen w-full object-cover object-bottom"
