--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,12 +57,15 @@
   .heading-3 {
     font-size: clamp(1.225rem, 3vw, 1.15rem);
   }
-  .dotted-overlay {
-    backgroundimage: "url('/images/gridtile.webp')";
+}
+
+@layer components {
+  .dotted-overlay::after {
+    background-image: url("/images/gridtile.webp");
     position: absolute;
     inset: 0;
     width: 100%;
     height: 100%;
-    zindex: 3;
+    z-index: 3;
   }
 }
